# nsi

./: .gitignore  install_dev.sh
ot/: CMakeLists.txt  iknpote.cpp  iknpote.h  kkrtot.cpp  kkrtot.h  naorpinkas.cpp  naorpinkas.h
src/: iknpote.cpp  naorpinkas.cpp  naorpinkas.h  tpsiout.cpp
tpsi_bin/: build.sh
tpsi_py/: setup.py  setup_prepare.sh  tpsi.pyx
